fix: Along with the tasks, history immediately returns. Now history, comments, and tasks are sorted by the appropriate parameters